little refinements